--- a/plugin.xml
+++ b/plugin.xml
@@ -7,9 +7,9 @@
     <keywords>cordova,webview,cache,clear,android,ios</keywords>
     <description>Cordova plugin to clear locally persistent user data on Android and iOS.</description>
 
-    <repo>https://github.com/dpa99c/cordova-plugin-clear-data.git</repo>
-    <issue>https://github.com/dpa99c/cordova-plugin-clear-data/issues</issue>
-    <author email="dave@workingedge.co.uk" href="http://www.workingedge.co.uk">Dave Alden</author>
+    <repo>https://github.com/thorvx/cordova-plugin-clear-data.git</repo>
+    <issue>https://github.com/thorvx/cordova-plugin-clear-data/issues</issue>
+    <author email="diego.ot@gmail.com" href="http://www.dot-bo.com">Diego Olguin</author>
 
     <license>MIT</license>
 
